# swdir

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: config.yaml
src/: core.rs  dir_node.rs  helpers.rs  lib.rs  util.rs
src/core/: dir_node.rs  scan.rs  util.rs
src/dir_node/: util.rs
src/helpers/: dir_node.rs  file.rs  recurse.rs  validate.rs
tests/: test.rs
tests/fixtures/subdir/: subdir.txt
